<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DAD39B">

    <EditText
        android:id="@+id/update_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:fontFamily="sans-serif-light"
        android:hint="@string/insertTitle"
        android:inputType="textAutoComplete"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:layout_margin="15dp"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/update_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:fontFamily="sans-serif-light"
        android:hint="@string/insertdescricao"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:inputType="textAutoComplete"
        android:layout_margin="15dp"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/editNote"
        android:textColor="@android:color/white"
        android:background="@drawable/roundcorner"
        app:backgroundTint="@android:color/transparent"
        app:backgroundTintMode="screen"/>

    <Button
        android:id="@+id/button_remove"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:text="@string/deleteNote"
        android:textColor="@android:color/white"
        android:background="@drawable/roundcorner_4"
        app:backgroundTint="@android:color/transparent"
        app:backgroundTintMode="screen"/>

</LinearLayout>