<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DAD39B"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="127dp"
        android:layout_height="126dp"
        android:layout_gravity="center"
        android:layout_marginTop="48dp"
        android:src="@drawable/ic_city"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/username"
        android:layout_width="295dp"
        android:layout_height="48dp"
        android:layout_marginTop="68dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/nomeLogin"
        android:textColor="@color/black"
        android:textColorHint="#272222"
        android:textAlignment="center"
        android:background="@drawable/roundcorner_2"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:gravity="center" />

    <EditText
        android:id="@+id/password"
        android:layout_width="295dp"
        android:layout_height="48dp"
        android:layout_marginTop="136dp"
        android:background="@drawable/roundcorner_2"
        android:gravity="center"
        android:hint="@string/passwordLogin"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="#272222"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/login"
        android:layout_width="162dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:text="@string/botaoLogin"
        android:background="@drawable/roundcorner"
        app:backgroundTint="@android:color/transparent"
        app:backgroundTintMode="screen"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/buttonNotas"
        android:layout_width="285dp"
        android:layout_height="52dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/roundcorner"
        android:text="@string/botaoNotas"
        android:textSize="18sp"
        app:backgroundTint="@android:color/transparent"
        app:backgroundTintMode="screen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.539"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passCheck" />

    <CheckBox
        android:id="@+id/passCheck"
        android:layout_width="315dp"
        android:layout_height="53dp"
        android:gravity="center"
        android:text="@string/lembrarPass"
        android:textColor="@color/black"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="Jorge Pereira nº18154"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonNotas"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>